# flying_co_stereo

./: .gitignore  README.md  index.html
DepthAlign/: .gitignore  CMakeLists.txt  README.md  package.xml
DepthAlign/cfg/DepthAlign/: single_time_Paris_Env_Collab_depth_align.yaml
DepthAlign/datasets/paris-v2/landmarks/: features_collaborative.txt  features_collaborative_with_vio_A.txt  features_vio_landmarks_A.txt
DepthAlign/datasets/paris-v2/xy_fit/: Fit_xy.txt  Fit_xy_Collab.txt  Fit_xy_VIO.txt  Fit_xy_params.txt
DepthAlign/include/depthAlign/: area_calculation.h  depthAlignCommon.h
DepthAlign/launch/: align_single_depth.launch
DepthAlign/rviz/: visualize.rviz
DepthAlign/src/: depth_align_node.cpp
